Update project configuration and codebase: Added linting fix command in package.json, updated TypeScript configuration to exclude test files

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "prepare": "husky"
+    "prepare": "husky",
+    "fix": "npm run lint -- --fix"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
